// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateWorkerWrapper > should handle empty steps array > empty-steps 1`] = `
"const stepHandlers = new Map([

]);

function asObject(value) {
  return value && typeof value === 'object' && !Array.isArray(value) ? value : {};
}

export default {
  async fetch(request) {
    try {
      if (request.method !== 'POST') {
        return new Response(
          JSON.stringify({ error: 'Method not allowed' }),
          { 
            status: 405,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const url = new URL(request.url);
      const stepName = url.searchParams.get('step') || 
                       request.headers.get('X-Step-Name');
      
      if (!stepName) {
        return new Response(
          JSON.stringify({ 
            error: 'Missing step name',
            message: 'Provide step name via ?step=<name> query param or X-Step-Name header'
          }),
          { 
            status: 400,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const step = stepHandlers.get(stepName);
      if (!step) {
        return new Response(
          JSON.stringify({ 
            error: 'Step not found',
            stepName,
            available: Array.from(stepHandlers.keys()),
            workflowId: "workflow",
            environmentId: "env"
          }),
          { 
            status: 404,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      let body = {};
      const rawBody = await request.text();
      if (rawBody) {
        try {
          body = JSON.parse(rawBody);
        } catch {
          return new Response(
            JSON.stringify({
              error: 'Invalid JSON body',
              workflowId: "workflow",
              environmentId: "env"
            }),
            {
              status: 400,
              headers: { 'Content-Type': 'application/json' }
            }
          );
        }
      }

      const parsedBody = asObject(body);
      const payload = asObject(parsedBody.payload);
      const subscriber = asObject(parsedBody.subscriber);
      const context = asObject(parsedBody.context);
      const stepOutputs = asObject(parsedBody.steps);

      // Call the user's step handler function
      const result = await step.handler({ payload, subscriber, context, steps: stepOutputs });

      return new Response(
        JSON.stringify({
          stepId: step.stepId,
          workflowId: step.workflowId,
          subject: result.subject,
          body: result.body,
          environmentId: "env"
        }),
        {
          status: 200,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    } catch (error) {
      console.error('Error executing step handler:', error);
      
      return new Response(
        JSON.stringify({
          error: 'Step execution failed',
          message: error instanceof Error ? error.message : 'Unknown error',
          workflowId: "workflow",
          environmentId: "env"
        }),
        {
          status: 500,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    }
  },
};"
`;

exports[`generateWorkerWrapper > should handle single step > single-step 1`] = `
"import stepHandler0, { stepId as stepId0, workflowId as workflowId0 } from "./novu/welcome-email.step";

const stepHandlers = new Map([
  ["welcome-email", {
    handler: stepHandler0,
    stepId: stepId0,
    workflowId: workflowId0
  }]
]);

function asObject(value) {
  return value && typeof value === 'object' && !Array.isArray(value) ? value : {};
}

export default {
  async fetch(request) {
    try {
      if (request.method !== 'POST') {
        return new Response(
          JSON.stringify({ error: 'Method not allowed' }),
          { 
            status: 405,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const url = new URL(request.url);
      const stepName = url.searchParams.get('step') || 
                       request.headers.get('X-Step-Name');
      
      if (!stepName) {
        return new Response(
          JSON.stringify({ 
            error: 'Missing step name',
            message: 'Provide step name via ?step=<name> query param or X-Step-Name header'
          }),
          { 
            status: 400,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const step = stepHandlers.get(stepName);
      if (!step) {
        return new Response(
          JSON.stringify({ 
            error: 'Step not found',
            stepName,
            available: Array.from(stepHandlers.keys()),
            workflowId: "workflow",
            environmentId: "env"
          }),
          { 
            status: 404,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      let body = {};
      const rawBody = await request.text();
      if (rawBody) {
        try {
          body = JSON.parse(rawBody);
        } catch {
          return new Response(
            JSON.stringify({
              error: 'Invalid JSON body',
              workflowId: "workflow",
              environmentId: "env"
            }),
            {
              status: 400,
              headers: { 'Content-Type': 'application/json' }
            }
          );
        }
      }

      const parsedBody = asObject(body);
      const payload = asObject(parsedBody.payload);
      const subscriber = asObject(parsedBody.subscriber);
      const context = asObject(parsedBody.context);
      const stepOutputs = asObject(parsedBody.steps);

      // Call the user's step handler function
      const result = await step.handler({ payload, subscriber, context, steps: stepOutputs });

      return new Response(
        JSON.stringify({
          stepId: step.stepId,
          workflowId: step.workflowId,
          subject: result.subject,
          body: result.body,
          environmentId: "env"
        }),
        {
          status: 200,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    } catch (error) {
      console.error('Error executing step handler:', error);
      
      return new Response(
        JSON.stringify({
          error: 'Step execution failed',
          message: error instanceof Error ? error.message : 'Unknown error',
          workflowId: "workflow",
          environmentId: "env"
        }),
        {
          status: 500,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    }
  },
};"
`;

exports[`generateWorkerWrapper > should match snapshot 1`] = `
"import stepHandler0, { stepId as stepId0, workflowId as workflowId0 } from "./novu/welcome-email.step";
import stepHandler1, { stepId as stepId1, workflowId as workflowId1 } from "./novu/verify-email.step";

const stepHandlers = new Map([
  ["welcome-email", {
    handler: stepHandler0,
    stepId: stepId0,
    workflowId: workflowId0
  }],
  ["verify-email", {
    handler: stepHandler1,
    stepId: stepId1,
    workflowId: workflowId1
  }]
]);

function asObject(value) {
  return value && typeof value === 'object' && !Array.isArray(value) ? value : {};
}

export default {
  async fetch(request) {
    try {
      if (request.method !== 'POST') {
        return new Response(
          JSON.stringify({ error: 'Method not allowed' }),
          { 
            status: 405,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const url = new URL(request.url);
      const stepName = url.searchParams.get('step') || 
                       request.headers.get('X-Step-Name');
      
      if (!stepName) {
        return new Response(
          JSON.stringify({ 
            error: 'Missing step name',
            message: 'Provide step name via ?step=<name> query param or X-Step-Name header'
          }),
          { 
            status: 400,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const step = stepHandlers.get(stepName);
      if (!step) {
        return new Response(
          JSON.stringify({ 
            error: 'Step not found',
            stepName,
            available: Array.from(stepHandlers.keys()),
            workflowId: "onboarding",
            environmentId: "env-123"
          }),
          { 
            status: 404,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      let body = {};
      const rawBody = await request.text();
      if (rawBody) {
        try {
          body = JSON.parse(rawBody);
        } catch {
          return new Response(
            JSON.stringify({
              error: 'Invalid JSON body',
              workflowId: "onboarding",
              environmentId: "env-123"
            }),
            {
              status: 400,
              headers: { 'Content-Type': 'application/json' }
            }
          );
        }
      }

      const parsedBody = asObject(body);
      const payload = asObject(parsedBody.payload);
      const subscriber = asObject(parsedBody.subscriber);
      const context = asObject(parsedBody.context);
      const stepOutputs = asObject(parsedBody.steps);

      // Call the user's step handler function
      const result = await step.handler({ payload, subscriber, context, steps: stepOutputs });

      return new Response(
        JSON.stringify({
          stepId: step.stepId,
          workflowId: step.workflowId,
          subject: result.subject,
          body: result.body,
          environmentId: "env-123"
        }),
        {
          status: 200,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    } catch (error) {
      console.error('Error executing step handler:', error);
      
      return new Response(
        JSON.stringify({
          error: 'Step execution failed',
          message: error instanceof Error ? error.message : 'Unknown error',
          workflowId: "onboarding",
          environmentId: "env-123"
        }),
        {
          status: 500,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    }
  },
};"
`;
